Updated gerador ul css

--- a/css/NVo6tsu5zvRa.css
+++ b/css/NVo6tsu5zvRa.css
@@ -26,6 +26,11 @@ img {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-top: 12%;
 }
 
 .gerador ul li {
