Uptade and add gerador css media

--- a/css/NVo6tsu5zvRa.css
+++ b/css/NVo6tsu5zvRa.css
@@ -28,7 +28,7 @@ img {
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    
+    align-items: center;
     justify-content: center;
     padding-top: 12%;
 }
@@ -123,3 +123,30 @@ img {
         height: 38px !important;
     }
 }
+
+@media screen and (min-width: 900px) and (max-width: 1200px){
+    .gerador .tigerimage {
+        min-width: 550px;
+    }  
+}
+
+@media screen and (min-width: 992px) and (max-width: 1000px){
+    .gerador ul {
+        left: 60%;
+        width: 500px;
+    }    
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1200px){
+    .gerador ul {
+        left: 60%;
+        width: 500px;
+    }  
+
+    .gerador .btn-gerar {
+        left: 60%;
+        width: 500px;
+    }
+}
+
+
