--- a/css/NVo6tsu5zvRa.css
+++ b/css/NVo6tsu5zvRa.css
@@ -99,13 +99,10 @@ img {
 
 @media screen and (max-width: 500px) {
 
-    .gerador ul li {
-        height: 35px;
+    .gerador ul {
+        top: 15%;
     }  
 
-    .gerador ul li img {
-        height: 23px;
-    }  
 }
 
 @media screen and (max-width: 767px) {
